# pong-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SDL2/: SDL_config.h
